--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body>
-    <h1>hola</h1>
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1> Techno & EDM Festival</h1>
+            <nav class="navegacion-principal">
+                <a href="#" class="enlace">Line UP</a>
+                <a href="#" class="enlace">Galería</a>
+                <a href="#" class="enlace">Boletos</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
