--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
             </nav>
         </div>
     </header>
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2> Techno & EDM Festival</h2>
+                <p>Enero 2025, CDMX, México.</p>
+            </div>
+        </div>
+        <video autoplay loop> 
+            <source src="video/dj.mp4" type="video/mp4"/>
+            <source src="video/dj.ogv" type="video/ogv"/>
+            <source src="video/dj.webm" type="video/webm"/>
+        </video>
+    </div>
 </body>
 </html>
