Festival, darken remove

--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
             <source src="video/dj.webm" type="video/webm"/>
         </video>
     </div>
+    <section class="sobre-festival">
+        <div class="imagen">
+            <img src="src/img/imagen_dj.jpg" alt="">
+        </div>
+        <div class="contenido-festival">
+            <h2>Techno & EDM Festival</h2>
+            <p class="fecha">Enero 2025, CDMX, México.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, distinctio. Cumque, unde totam deleniti odio accusamus eum nisi quis, veniam ipsam debitis maiores officia iure neque sequi incidunt, quasi ipsum.</p>
+        </div>
+    </section>
 </body>
 </html>
