--- a/index.html
+++ b/index.html
@@ -191,5 +191,8 @@
             </div><!--Pase -->
         </div><!--Boletos -->
     </section>
+    <footer class="footer">
+        <p>Techno & EDM Festival. Todos los derechos reservados.s</p>
+    </footer>
 </body>
 </html>
