add js, css, html

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
             </div> <!--.escenario-->
         </div> <!--.escenarios-contenedor -->
     </section>
+    <section id="galeria" class="galeria">
+        <h3>Galería</h3>
+        <div class="galeria-imagenes">
+
+        </div>
+    </section>
     <section id="boletos" class="contenido-boletos">
         <h3>Boletos</h3>
         <div class="boletos">
@@ -194,5 +200,6 @@
     <footer class="footer">
         <p>Techno & EDM Festival. Todos los derechos reservados.s</p>
     </footer>
+    <script src="build/js/app.js"></script>
 </body>
 </html>
