--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="contenedor contenido-header">
             <h1> Techno & EDM Festival</h1>
             <nav class="navegacion-principal">
-                <a href="#" class="enlace">Line UP</a>
-                <a href="#" class="enlace">Galería</a>
-                <a href="#" class="enlace">Boletos</a>
+                <a href="#lineup" class="enlace">Line UP</a>
+                <a href="#galeria" class="enlace">Galería</a>
+                <a href="#boletos" class="enlace">Boletos</a>
             </nav>
         </div>
     </header>
@@ -156,7 +156,6 @@
     <section id="galeria" class="galeria">
         <h3>Galería</h3>
         <div class="galeria-imagenes">
-
         </div>
     </section>
     <section id="boletos" class="contenido-boletos">
